--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         </div>
         <a href="others.html">Others</a>
     </header>
+    <main>
+        <ul>
+            <li><a href="gpg_for_ssh.html">WSL使用GPG进行SSH认证</a></li>
+        </ul>
+    </main>
 
 
     <script src="audio.js"></script>
