--- a/others.html
+++ b/others.html
@@ -22,6 +22,43 @@
         </div>
         <a href="index.html">Home</a>
     </header>
+    <main>
+        <ul>
+            <li>
+                <a href="https://blog.camb.moe">blog.camb.moe</a>
+            </li>
+            <li>
+                <a href="https://dioxide-cn.ink">dioxide-cn.ink</a>
+            </li>
+            <li>
+                <a href="http://llx.life">llx.life</a>
+            </li>
+            <li>
+                <a href="https://linesoft.dev">linesoft.dev</a>
+            </li>
+            <li>
+                <a href="https://my.minecraft.kim">my.minecraft.kim</a>
+            </li>
+            <li>
+                <a href="https://www.epicmo.cn">www.epicmo.cn</a>
+            </li>
+            <li>
+                <a href="https://lhr.wiki">lhr.wiki</a>
+            </li>
+            <li>
+                <a href="https://corn.li">corn.li</a>
+            </li>
+            <li>
+                <a href="https://ntz.im">ntz.im</a>
+            </li>
+            <li>
+                <a href="https://blog.xkeyc.com">blog.xkeyc.com</a>
+            </li>
+            <li>
+                <a href="https://gxb.icu">gxb.icu</a>
+            </li>
+        </ul>
+    </main>
 </body>
 
 </html>
