--- a/gpg_for_ssh.html
+++ b/gpg_for_ssh.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="ThalliMega,Thallium Megalovania,blog,gpg,ssh">
     <link rel="icon" href="avatar.svg" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="mobile.css" />
-    <link rel="stylesheet" href="desktop.css" />
+    <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
+    <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
     <title>WSL使用GPG进行SSH认证</title>
 </head>
 
