--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta name="keywords" content="ThalliMega,Thallium Megalovania,blog">
     <link rel="icon" href="avatar.svg" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="mobile.css" />
-    <link rel="stylesheet" href="desktop.css" />
+    <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
+    <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
+
+    <script src="audio.js" defer></script>
 
     <title>ThalliMega's Blog</title>
 </head>
@@ -30,8 +32,6 @@
         </ul>
     </main>
 
-
-    <script src="audio.js"></script>
 </body>
 
 </html>
