--- a/others.html
+++ b/others.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="ThalliMega,Thallium Megalovania,blog">
     <link rel="icon" href="avatar.svg" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="mobile.css" />
-    <link rel="stylesheet" href="desktop.css" />
+    <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
+    <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
     <title>Others' Blog</title>
 </head>
 
@@ -28,9 +28,6 @@
                 <a href="https://blog.camb.moe">blog.camb.moe</a>
             </li>
             <li>
-                <a href="https://dioxide-cn.ink">dioxide-cn.ink</a>
-            </li>
-            <li>
                 <a href="http://llx.life">llx.life</a>
             </li>
             <li>
@@ -46,16 +43,10 @@
                 <a href="https://lhr.wiki">lhr.wiki</a>
             </li>
             <li>
-                <a href="https://corn.li">corn.li</a>
-            </li>
-            <li>
                 <a href="https://ntz.im">ntz.im</a>
             </li>
             <li>
                 <a href="https://blog.xkeyc.com">blog.xkeyc.com</a>
-            </li>
-            <li>
-                <a href="https://gxb.icu">gxb.icu</a>
             </li>
         </ul>
     </main>
