--- a/others.html
+++ b/others.html
@@ -48,6 +48,9 @@
             <li>
                 <a href="https://blog.xkeyc.com">blog.xkeyc.com</a>
             </li>
+            <li>
+                <a href="https://xn--misa-mtf-s00n631csyres5ca.life/">misa想变猫猫娘-mtf.life</a>
+            </li>
         </ul>
     </main>
 </body>
