--- a/others.html
+++ b/others.html
@@ -51,6 +51,12 @@
             <li>
                 <a href="https://xn--misa-mtf-s00n631csyres5ca.life/">misa想变猫猫娘-mtf.life</a>
             </li>
+            <li>
+                <a href="https://blog.eatswap.org/">blog.eatswap.org</a>
+            </li>
+            <li>
+                <a href="https://blog.shanwer.top/">blog.shanwer.top</a>
+            </li>
         </ul>
     </main>
 </body>
