--- a/others.html
+++ b/others.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
     <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
     <title>Others' Blog</title>
+    <script src="audio.js" defer></script>
 </head>
 
 <body>
+    <audio src="https://files.thallimega.win/2-13. Aria Math.mp3" preload="auto" id="audio"></audio>
     <header>
         <div>
-            <img src="avatar.svg" alt="avatar" id="avatar" style="cursor:default" />
+            <img src="avatar.svg" alt="avatar" id="avatar" />
             <h1>Others' Blog</h1>
         </div>
         <a href="index.html">Home</a>
@@ -56,6 +58,9 @@
             </li>
             <li>
                 <a href="https://blog.shanwer.top/">blog.shanwer.top</a>
+            </li>
+            <li>
+                <a href="https://reubensun.com/">reubensun.com</a>
             </li>
         </ul>
     </main>
