--- a/others.html
+++ b/others.html
@@ -62,6 +62,9 @@
             <li>
                 <a href="https://reubensun.com/">reubensun.com</a>
             </li>
+            <li>
+                <a href="https://blog.xkeyc.com/">blog.xkeyc.com</a>
+            </li>
         </ul>
     </main>
 </body>
