--- a/others.html
+++ b/others.html
@@ -65,6 +65,9 @@
             <li>
                 <a href="https://blog.xkeyc.com/">blog.xkeyc.com</a>
             </li>
+            <li>
+                <a href="https://blog.hanbings.io/">blog.hanbings.io</a>
+            </li>
         </ul>
     </main>
 </body>
