--- a/others.html
+++ b/others.html
@@ -68,6 +68,9 @@
             <li>
                 <a href="https://blog.hanbings.io/">blog.hanbings.io</a>
             </li>
+            <li>
+                <a href="https://blog.csbxd.fun/">blog.csbxd.fun</a>
+            </li>
         </ul>
     </main>
 </body>
