--- a/others.html
+++ b/others.html
@@ -71,6 +71,9 @@
             <li>
                 <a href="https://blog.csbxd.fun/">blog.csbxd.fun</a>
             </li>
+            <li>
+                <a href="https://www.hyosakura.com/">www.hyosakura.com</a>
+            </li>
         </ul>
     </main>
 </body>
