--- a/gpg_for_ssh.html
+++ b/gpg_for_ssh.html
@@ -54,6 +54,7 @@ gpg: [stdin]: clear-sign failed: Inappropriate ioctl for device
         <cite>~/.config/fish/config.fish</cite><br>
         <code>set -gx GPG_TTY (tty)</code><br>
     </main>
+    <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
 </body>
 
 </html>
