--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="gpg_for_ssh.html">WSL使用GPG进行SSH认证</a></li>
         </ul>
     </main>
-
+    <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
 </body>
 
 </html>
