--- a/others.html
+++ b/others.html
@@ -76,6 +76,7 @@
             </li>
         </ul>
     </main>
+    <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
 </body>
 
 </html>
