_blank external link
Signed-off-by: Thallium Megalovania <thallimega@foxmail.com>

--- a/others.html
+++ b/others.html
@@ -27,52 +27,52 @@
     <main>
         <ul>
             <li>
-                <a href="https://blog.camb.moe">blog.camb.moe</a>
+                <a href="https://blog.camb.moe" target="_blank">blog.camb.moe</a>
             </li>
             <li>
-                <a href="http://llx.life">llx.life</a>
+                <a href="http://llx.life" target="_blank">llx.life</a>
             </li>
             <li>
-                <a href="https://linesoft.dev">linesoft.dev</a>
+                <a href="https://linesoft.dev" target="_blank">linesoft.dev</a>
             </li>
             <li>
-                <a href="https://my.minecraft.kim">my.minecraft.kim</a>
+                <a href="https://my.minecraft.kim" target="_blank">my.minecraft.kim</a>
             </li>
             <li>
-                <a href="https://www.epicmo.cn">www.epicmo.cn</a>
+                <a href="https://www.epicmo.cn" target="_blank">www.epicmo.cn</a>
             </li>
             <li>
-                <a href="https://lhr.wiki">lhr.wiki</a>
+                <a href="https://lhr.wiki" target="_blank">lhr.wiki</a>
             </li>
             <li>
-                <a href="https://ntz.im">ntz.im</a>
+                <a href="https://ntz.im" target="_blank">ntz.im</a>
             </li>
             <li>
-                <a href="https://blog.xkeyc.com">blog.xkeyc.com</a>
+                <a href="https://blog.xkeyc.com" target="_blank">blog.xkeyc.com</a>
             </li>
             <li>
-                <a href="https://xn--misa-mtf-s00n631csyres5ca.life/">misa想变猫猫娘-mtf.life</a>
+                <a href="https://xn--misa-mtf-s00n631csyres5ca.life/" target="_blank">misa想变猫猫娘-mtf.life</a>
             </li>
             <li>
-                <a href="https://blog.eatswap.org/">blog.eatswap.org</a>
+                <a href="https://blog.eatswap.org/" target="_blank">blog.eatswap.org</a>
             </li>
             <li>
-                <a href="https://blog.shanwer.top/">blog.shanwer.top</a>
+                <a href="https://blog.shanwer.top/" target="_blank">blog.shanwer.top</a>
             </li>
             <li>
-                <a href="https://reubensun.com/">reubensun.com</a>
+                <a href="https://reubensun.com/" target="_blank">reubensun.com</a>
             </li>
             <li>
-                <a href="https://blog.xkeyc.com/">blog.xkeyc.com</a>
+                <a href="https://blog.xkeyc.com/" target="_blank">blog.xkeyc.com</a>
             </li>
             <li>
-                <a href="https://blog.hanbings.io/">blog.hanbings.io</a>
+                <a href="https://blog.hanbings.io/" target="_blank">blog.hanbings.io</a>
             </li>
             <li>
-                <a href="https://blog.csbxd.fun/">blog.csbxd.fun</a>
+                <a href="https://blog.csbxd.fun/" target="_blank">blog.csbxd.fun</a>
             </li>
             <li>
-                <a href="https://www.hyosakura.com/">www.hyosakura.com</a>
+                <a href="https://www.hyosakura.com/" target="_blank">www.hyosakura.com</a>
             </li>
         </ul>
     </main>
