--- a/others.html
+++ b/others.html
@@ -74,6 +74,9 @@
             <li>
                 <a href="https://www.hyosakura.com/" target="_blank">www.hyosakura.com</a>
             </li>
+            <li>
+                <a href="https://insights.nico.wang/" target="_blank">insights.nico.wang</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
