--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
 
     <script src="audio.js" defer></script>
+    <script src="secret.js" defer></script>
 
     <title>ThalliMega's Blog</title>
 </head>
