--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="ThalliMega,Thallium Megalovania,blog">
     <link rel="icon" href="avatar.svg" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="secret.css" />
     <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
     <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
 
