--- a/others.html
+++ b/others.html
@@ -77,6 +77,9 @@
             <li>
                 <a href="https://insights.nico.wang/" target="_blank">insights.nico.wang</a>
             </li>
+            <li>
+                <a href="https://blog.sonui.cn/" target="_blank">blog.sonui.cn</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
