--- a/others.html
+++ b/others.html
@@ -80,6 +80,9 @@
             <li>
                 <a href="https://blog.sonui.cn/" target="_blank">blog.sonui.cn</a>
             </li>
+            <li>
+                <a href="https://barren.cat/" target="_blank">barren.cat</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
