--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <img src="avatar.svg" alt="avatar" id="avatar" />
             <h1><span id="name" title="No. This name has no special meaning.">ThalliMega</span>'s Blog</h1>
         </div>
+        <a rel="me" href="https://mastodon.social/@thallimega">Mastodon</a>
         <a href="others.html">Others</a>
     </header>
     <main>
