--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="gpg_for_ssh.html">WSL使用GPG进行SSH认证</a></li>
             <li><a href="how_to_set_footer.html">使用flex實現頁底footer</a></li>
             <li><a href="deploy_matrix.html">集群部署matrix</a></li>
+            <li><a href="web_key_directory.html">配置Web Key Directory</a></li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
