--- a/others.html
+++ b/others.html
@@ -83,6 +83,9 @@
             <li>
                 <a href="https://barren.cat/" target="_blank">barren.cat</a>
             </li>
+            <li>
+                <a href="https://kagurayayoi.top/" target="_blank">kagurayayoi.top</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
