--- a/others.html
+++ b/others.html
@@ -86,6 +86,12 @@
             <li>
                 <a href="https://kagurayayoi.top/" target="_blank">kagurayayoi.top</a>
             </li>
+            <li>
+                <a href="http://me.ooo.cat/" target="_blank">me.ooo.cat</a>
+            </li>
+            <li>
+                <a href="https://iyn.me/" target="_blank">iyn.me</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
