--- a/others.html
+++ b/others.html
@@ -92,6 +92,9 @@
             <li>
                 <a href="https://iyn.me/" target="_blank">iyn.me</a>
             </li>
+            <li>
+                <a href="https://norand.top/" target="_blank">norand.top</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
