--- a/others.html
+++ b/others.html
@@ -95,6 +95,9 @@
             <li>
                 <a href="https://norand.top/" target="_blank">norand.top</a>
             </li>
+            <li>
+                <a href="https://www.xn--ghq663ao0ncr3a.top/" target="_blank">www.豫下洛子.top</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
