--- a/gpg_for_ssh.html
+++ b/gpg_for_ssh.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
     <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
     <title>WSL使用GPG进行SSH认证</title>
+
+    <script src="audio.js" defer></script>
 </head>
 
 <body>
+    <audio src="https://files.thallimega.win/Violation%20Of%20Black%20Colors.mp3" preload="auto" id="audio"></audio>
     <header>
         <div>
             <img src="avatar.svg" alt="avatar" id="avatar" style="cursor:default" />
