--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <audio src="https://files.thallimega.win/Nujabes - Kujaku.mp3" preload="auto" id="audio"></audio>
+    <audio src="https://files.thallimega.win/My%20Inspiration.mp3" preload="auto" id="audio"></audio>
     <header>
         <div>
             <img src="avatar.svg" alt="avatar" id="avatar" />
