--- a/deploy_matrix.html
+++ b/deploy_matrix.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
     <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
     <title>集群部署matrix</title>
+
+    <script src="audio.js" defer></script>
 </head>
 
 <body>
+    <audio src="https://files.thallimega.win/Retro%20Time.mp3" preload="auto" id="audio"></audio>
     <header>
         <div>
             <img src="avatar.svg" alt="avatar" id="avatar" style="cursor:default" />
