--- a/how_to_set_footer.html
+++ b/how_to_set_footer.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="mobile.css" media="(max-width:999px)" />
     <link rel="stylesheet" href="desktop.css" media="(min-width:1000px)" />
     <title>使用flex實現頁底footer</title>
+
+    <script src="audio.js" defer></script>
 </head>
 
 <body>
+    <audio src="https://files.thallimega.win/Faded.mp3" preload="auto" id="audio"></audio>
     <header>
         <div>
             <img src="avatar.svg" alt="avatar" id="avatar" style="cursor:default" />
