--- a/others.html
+++ b/others.html
@@ -27,76 +27,77 @@
     <main>
         <ul>
             <li>
-                <a href="https://blog.camb.moe" target="_blank">blog.camb.moe</a>
+                <a href="https://blog.camb.moe" target="_blank" class="down">blog.camb.moe</a>
             </li>
             <li>
-                <a href="http://llx.life" target="_blank">llx.life</a>
+                <a href="http://llx.life" target="_blank">陆陆侠的生活</a>
             </li>
             <li>
-                <a href="https://linesoft.dev" target="_blank">linesoft.dev</a>
+                <a href="https://linesoft.dev" target="_blank">双霖（LineSoft）</a>
             </li>
             <li>
-                <a href="https://my.minecraft.kim" target="_blank">my.minecraft.kim</a>
+                <a href="https://my.minecraft.kim" target="_blank">HikariLan's Blog | 兰草凋荡，星辰璀璨</a>
             </li>
             <li>
-                <a href="https://www.epicmo.cn" target="_blank">www.epicmo.cn</a>
+                <a href="https://www.epicmo.cn" target="_blank">EpicMoCN - 博客园</a>
             </li>
             <li>
-                <a href="https://lhr.wiki" target="_blank">lhr.wiki</a>
+                <a href="https://lhr.wiki" target="_blank">练习小册</a>
             </li>
             <li>
-                <a href="https://ntz.im" target="_blank">ntz.im</a>
+                <a href="https://ntz.im" target="_blank">QiroNT/blog</a>
             </li>
             <li>
-                <a href="https://blog.xkeyc.com" target="_blank">blog.xkeyc.com</a>
+                <a href="https://blog.xkeyc.com" target="_blank">首页-xkeyC's Blog</a>
             </li>
             <li>
-                <a href="https://xn--misa-mtf-s00n631csyres5ca.life/" target="_blank">misa想变猫猫娘-mtf.life</a>
+                <a href="https://xn--misa-mtf-s00n631csyres5ca.life/" target="_blank">misa想变猫猫娘的糖果盒 –
+                    不向焦虑与抑郁投降，这个世界终会有我们存在的地方</a>
             </li>
             <li>
-                <a href="https://blog.eatswap.org/" target="_blank">blog.eatswap.org</a>
+                <a href="https://blog.eatswap.org/" target="_blank">Eatswap Trashcan</a>
             </li>
             <li>
-                <a href="https://blog.shanwer.top/" target="_blank">blog.shanwer.top</a>
+                <a href="https://blog.shanwer.top/" target="_blank">Shanwer's Blog</a>
             </li>
             <li>
-                <a href="https://reubensun.com/" target="_blank">reubensun.com</a>
+                <a href="https://reubensun.com/" target="_blank">ReubenSun</a>
             </li>
             <li>
-                <a href="https://blog.xkeyc.com/" target="_blank">blog.xkeyc.com</a>
+                <a href="https://blog.hanbings.io/" target="_blank">主页 - 🐱 寒冰是喵喵</a>
             </li>
             <li>
-                <a href="https://blog.hanbings.io/" target="_blank">blog.hanbings.io</a>
+                <a href="https://blog.csbxd.fun/" target="_blank">不插电の記録|bxd-blog</a>
             </li>
             <li>
-                <a href="https://blog.csbxd.fun/" target="_blank">blog.csbxd.fun</a>
+                <a href="https://www.hyosakura.com/" target="_blank">冰星 / LovesAsuna - hyosakura.com</a>
             </li>
             <li>
-                <a href="https://www.hyosakura.com/" target="_blank">www.hyosakura.com</a>
+                <a href="https://insights.nico.wang/" target="_blank">NK's Insights</a>
             </li>
             <li>
-                <a href="https://insights.nico.wang/" target="_blank">insights.nico.wang</a>
+                <a href="https://blog.sonui.cn/" target="_blank">Sonui's Blog</a>
             </li>
             <li>
-                <a href="https://blog.sonui.cn/" target="_blank">blog.sonui.cn</a>
+                <a href="https://barren.cat/" target="_blank">Meow | Barren Cat</a>
             </li>
             <li>
-                <a href="https://barren.cat/" target="_blank">barren.cat</a>
+                <a href="https://kagurayayoi.top/" target="_blank">KaguraYayoi Portal</a>
             </li>
             <li>
-                <a href="https://kagurayayoi.top/" target="_blank">kagurayayoi.top</a>
+                <a href="http://me.ooo.cat/" target="_blank">ユキのハニージャー☆~</a>
             </li>
             <li>
-                <a href="http://me.ooo.cat/" target="_blank">me.ooo.cat</a>
+                <a href="https://iyn.me/" target="_blank">一年又一年的博客</a>
             </li>
             <li>
-                <a href="https://iyn.me/" target="_blank">iyn.me</a>
+                <a href="https://norand.top/" target="_blank">Nowhereland | Nowhereman</a>
             </li>
             <li>
-                <a href="https://norand.top/" target="_blank">norand.top</a>
+                <a href="https://www.xn--ghq663ao0ncr3a.top/" target="_blank" class="shit-title">首页</a>
             </li>
             <li>
-                <a href="https://www.xn--ghq663ao0ncr3a.top/" target="_blank">www.豫下洛子.top</a>
+                <a href="https://yawntee.top/" target="_blank">炎天的生活小记</a>
             </li>
         </ul>
     </main>
