--- a/web_key_directory.html
+++ b/web_key_directory.html
@@ -28,7 +28,7 @@
     <main>
         <h1>配置WKD</h1>
         <h2>direct mode</h2>
-        <strong>DON'T MAKE openpgpkey.$DOMAIN A/AAAA/CNAME DNS RECORDS</strong>
+        <strong>DON'T MAKE openpgpkey.$DOMAIN A/AAAA/CNAME DNS RECORDS</strong><br>
         <strong>ASK USER TO DISABLE FAKE IP IF ONLY USING DIRECT MODE</strong><br>
         <strong>IF IT'S HARD THEN USE ADVANCED MODE</strong>
         <h3>$DOMAIN/.well-known/openpgpkey/policy</h3>
