--- a/others.html
+++ b/others.html
@@ -99,6 +99,9 @@
             <li>
                 <a href="https://yawntee.top/" target="_blank">炎天的生活小记</a>
             </li>
+            <li>
+                <a href="https://www.oboard.fun/" target="_blank">一块小板子</a>
+            </li>
         </ul>
     </main>
     <footer><a href="https://icp.gov.moe/?keyword=20240124" target="_blank">萌ICP备20240124号</a></footer>
